:star2: feat: login page

--- a/src/components/BigMap/bigMap.css
+++ b/src/components/BigMap/bigMap.css
@@ -5,3 +5,13 @@
 .Map {
     width: 100%;
 }
+
+.Map_blur > *{
+    height: 100vh !important;
+    width: 100% !important;
+    filter: blur(1px);
+}
+.Map_blur {
+    width: 100%;
+    filter: blur(1px);
+}
