--- a/src/components/SideBarWrap/sideBarWrap.css
+++ b/src/components/SideBarWrap/sideBarWrap.css
@@ -3,6 +3,10 @@
     width: 30%;
     position: absolute;
     background-color: #fff;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: center;
     z-index: 10;
     box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.4);
 }
