--- a/src/normalize.css
+++ b/src/normalize.css
@@ -8,6 +8,21 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
+
+ input[type = submit], input[type = reset] {
+  background-color: orange;
+  border: none;
+  text-decoration: none;
+  color: white;
+  padding: 20px 20px;
+  margin: 20px 20px;
+  cursor: pointer;
+}
+
+input:focus {
+  outline: none;
+}
+
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
