:lipstick: style: ui styling

--- a/src/components/SideBarWrap/sideBarWrap.css
+++ b/src/components/SideBarWrap/sideBarWrap.css
@@ -1,6 +1,6 @@
 .SideBar-wrap{
     height: 100vh;
-    width: 30%;
+    width: 500px;
     position: absolute;
     background-color: #fff;
     display: flex;
