--- a/src/components/Cards/CardsItemContainer/cardsItemContainer.css
+++ b/src/components/Cards/CardsItemContainer/cardsItemContainer.css
@@ -1,3 +1,9 @@
-.Cards-item-container-name {
+.Cards-item-container {
     display: flex;
+    width: 460px;
+    height: 148px;
+    background: #FCFCFC;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    margin-top: 19px;
 }
