--- a/src/components/Search/search.css
+++ b/src/components/Search/search.css
@@ -2,11 +2,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 40px;
-    width: 80%;
-    margin-top: 50xp;
+    height: 53px;
+    width: 460px;
     border-radius: 10px;
-    border: solid 2px #ccc;
+    background: #FFFFFF;
+box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.21);
 }
 
 .Search input{
