--- a/src/components/Search/search.css
+++ b/src/components/Search/search.css
@@ -4,6 +4,7 @@
     align-items: center;
     height: 53px;
     width: 460px;
+    margin-bottom: 30px;
     border-radius: 10px;
     background: #FFFFFF;
 box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.21);
@@ -12,7 +13,7 @@ box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.21);
 .Search input{
     text-decoration: none;
     width: 90%;
-    height: 30px;
+    height: 41px;
     border: 0;
 
 
