--- a/src/normalize.css
+++ b/src/normalize.css
@@ -32,7 +32,7 @@ html {
   scroll-behavior: smooth;
   max-height: 100%;
 
-  font-family: Montserrat, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  font-family:Poppins, Montserrat, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
